# AR4DBS

./: .gitignore  CMakeLists.txt
.claude/: settings.local.json
.github/workflows/: ios-build.yml
app/: AppController.cpp  AppController.h  ConfirmPlanDialog.cpp  ConfirmPlanDialog.h  MainWindow.cpp  MainWindow.h  ScanScreen.cpp  ScanScreen.h  StartScreen.cpp  StartScreen.h  main.cpp
core/depth/: DepthEstimator.cpp  DepthEstimator.h  PointCloudBuilder.cpp  PointCloudBuilder.h
core/math/: IncisionLine.cpp  IncisionLine.h  PoseUtils.cpp  PoseUtils.h  RayCaster.cpp  RayCaster.h  SurgicalPlan.h
core/ocr/: PlanScanner.cpp  PlanScanner.h
core/rendering/: GLWidget.cpp  GLWidget.h  OverlayRenderer.cpp  OverlayRenderer.h
core/tracking/: AprilTagTracker.cpp  AprilTagTracker.h  HybridTracker.cpp  HybridTracker.h  VispTracker.cpp  VispTracker.h
platform/desktop/: DesktopCamera.cpp  DesktopCamera.h
platform/ios/: ARKitSession.h  ARKitSession.mm  CameraIntrinsics.h  CameraIntrinsics.mm  CoreMLDepthEstimator.h  CoreMLDepthEstimator.mm  IOSCamera.cpp  IOSCamera.h  IOSCamera.mm  IOSOCREngine.h  IOSOCREngine.mm  Info.plist.in
resources/: calibration.json  surgical_plan.json  tag_config.json
scripts/: convert_depth_metric.py
